Adds chat room components and implements socket io connection to server side

--- a/src/app/core/components/landingpage/landingpage.component.html
+++ b/src/app/core/components/landingpage/landingpage.component.html
@@ -34,7 +34,7 @@
                                   <h3>{{ chosen.label }}</h3>
                                   <p>{{ chosen.description }}</p>
                                   <h5>{{ chosen.queryId }}</h5>
-                                  <a class="btn btn-primary btn-small" routerLink="../{{chosen.name}}">Take Test</a>
+                                  <a class="btn btn-primary btn-small" routerLink="../test/{{chosen.name}}">Take Test</a>
                                 </div>
                               </div>
 
